# TaiwanViz

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
api/: main.py  schemas.py  startup.py
api/routers/: maps.py  meta.py
taiwanviz/: data_loader.py
taiwanviz/data/shp/county/: COUNTY_MOI_1140318.dbf  COUNTY_MOI_1140318.shp.xml  TW-01-301000100G-000017.xml
taiwanviz/data/shp/town/: TOWN_MOI_1140318.dbf  TOWN_MOI_1140318.shp.xml  TW-07-301000100G-614001.xml  Town_Majia_Sanhe.dbf  Town_Majia_Sanhe.shp  Town_Majia_Sanhe.shp.xml
taiwanviz/data/shp/village/: TW-07-301000100G-613995.xml  VILLAGE_NLSC_1140825.dbf  VILLAGE_NLSC_1140825.shx  Village_Sanhe.dbf  Village_Sanhe.shp
taiwanviz/models/: __init__.py  choropleth.py  data_input.py
taiwanviz/models/base/: __init__.py  base.py  layers.py
taiwanviz/models/config/: __init__.py  render_config.py
taiwanviz/models/enums/: __init__.py  enums.py
taiwanviz/models/palette/: __init__.py  palette.py
taiwanviz/notebook/: main.ipynb
taiwanviz/utils/: __init__.py  colors.py  filters.py  fonts.py  plotting.py
