[tool.poetry]
name = "taiwanviz"
version = "0.1.0"
description = "Taiwan choropleth map rendering library"
authors = ["Anthony Sung <sungpinyue@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "taiwanviz" }]

include = [
    "taiwanviz/data/shp/**/*.shp",
    "taiwanviz/data/shp/**/*.dbf",
    "taiwanviz/data/shp/**/*.shx",
    "taiwanviz/data/shp/**/*.prj",
    "taiwanviz/data/shp/**/*.cpg",
    "taiwanviz/data/shp/**/*.xml",
    "taiwanviz/data/shp/**/*.sbn",
    "taiwanviz/data/shp/**/*.sbx",
    "backend/taiwanviz/fonts/**/*"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
geopandas = ">=1.1.1,<2.0.0"
matplotlib = ">=3.10.6,<4.0.0"
shapely = ">=2.1.1,<3.0.0"
pydantic = ">=2.4,<3.0"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"